--- a/com.unity.visualeffectgraph/VisualEffectGraph/Shaders/ParticleQuads/PassVS.template
+++ b/com.unity.visualeffectgraph/VisualEffectGraph/Shaders/ParticleQuads/PassVS.template
@@ -15,8 +15,9 @@ VFX_VARYING_PS_INPUTS vert(uint id : SV_VertexID, uint instanceID : SV_InstanceI
 	
 	${VFXLoadSize}
 	
-	float4x4 elementToVFX = GetElementToVFXMatrix(axisX,axisY,axisZ,float3(angleX,angleY,angleZ),pivot,size,position);
-	float3 vPos = mul(elementToVFX,float4(o.VFX_VARYING_UV.xy * 2.0f - 1.0f,0.0f,1.0f)).xyz;
+	const float2 vOffsets = o.VFX_VARYING_UV.xy * 2.0f - 1.0f;
+	const float4x4 elementToVFX = GetElementToVFXMatrix(axisX,axisY,axisZ,float3(angleX,angleY,angleZ),pivot,size,position);
+	const float3 vPos = mul(elementToVFX,float4(vOffsets,0.0f,1.0f)).xyz;
 
 	o.VFX_VARYING_POSCS = TransformPositionVFXToClip(vPos);
 
