--- a/ScriptableRenderPipeline/Core/package.json
+++ b/ScriptableRenderPipeline/Core/package.json
@@ -1,7 +1,8 @@
 {
     "name": "com.unity.render-pipelines.core",
+    "displayName": "SRP Core",
     "description": "Core library for Unity render pipelines.",
-    "version": "1.1.6-preview",
+    "version": "1.1.8-preview",
     "unity": "2018.1",
     "dependencies": {
         "com.unity.postprocessing": "2.0.5-preview"
