--- a/ScriptableRenderPipeline/LightweightPipeline/package.json
+++ b/ScriptableRenderPipeline/LightweightPipeline/package.json
@@ -1,11 +1,12 @@
 {
     "name": "com.unity.render-pipelines.lightweight",
     "description": "Lightweight Render Pipeline for Unity.",
+    "displayName": "Lightweight Render Pipeline",
     "dependencies": {
-        "com.unity.shadergraph": "1.1.4-preview",
+        "com.unity.shadergraph": "1.1.8-preview",
         "com.unity.postprocessing": "2.0.5-preview",
-        "com.unity.render-pipelines.core": "1.1.6-preview"
+        "com.unity.render-pipelines.core": "1.1.8-preview"
     },
-    "version": "1.1.6-preview",
+    "version": "1.1.8-preview",
     "unity": "2018.1"
 }
