--- a/ScriptableRenderPipeline/LightweightPipeline/LWRP/Editor/ShaderGraph/lightweightPBRForwardPass.template
+++ b/ScriptableRenderPipeline/LightweightPipeline/LWRP/Editor/ShaderGraph/lightweightPBRForwardPass.template
@@ -11,23 +11,27 @@ ${ZWrite}
 	HLSLPROGRAM
     // Required to compile gles 2.0 with standard srp library
     #pragma prefer_hlslcc gles
-	#pragma target 2.0
+    #pragma exclude_renderers d3d11_9x
+    #pragma target 2.0
 
 	// -------------------------------------
-	// Lightweight Pipeline keywords
-	#pragma multi_compile _ _ADDITIONAL_LIGHTS
-	#pragma multi_compile _ _VERTEX_LIGHTS
-	#pragma multi_compile _ _MIXED_LIGHTING_SUBTRACTIVE
-	#pragma multi_compile _ FOG_LINEAR FOG_EXP2
+    // Lightweight Pipeline keywords
+    #pragma multi_compile _ _ADDITIONAL_LIGHTS
+    #pragma multi_compile _ _VERTEX_LIGHTS
+    #pragma multi_compile _ _MIXED_LIGHTING_SUBTRACTIVE
+    #pragma multi_compile _ _SHADOWS_ENABLED
+    #pragma multi_compile _ _LOCAL_SHADOWS_ENABLED
+    #pragma multi_compile _ _SHADOWS_SOFT
 
 	// -------------------------------------
-	// Unity defined keywords
-	#pragma multi_compile _ DIRLIGHTMAP_COMBINED
-	#pragma multi_compile _ LIGHTMAP_ON
+    // Unity defined keywords
+    #pragma multi_compile _ DIRLIGHTMAP_COMBINED
+    #pragma multi_compile _ LIGHTMAP_ON
+    #pragma multi_compile_fog
 
-	//--------------------------------------
-	// GPU Instancing
-	#pragma multi_compile_instancing
+    //--------------------------------------
+    // GPU Instancing
+    #pragma multi_compile_instancing
 
     #pragma vertex vert
 	#pragma fragment frag
