--- a/ScriptableRenderPipeline/LightweightPipeline/LWRP/Editor/ShaderGraph/lightweightUnlitExtraPasses.template
+++ b/ScriptableRenderPipeline/LightweightPipeline/LWRP/Editor/ShaderGraph/lightweightUnlitExtraPasses.template
@@ -1,5 +1,6 @@
 Pass
 {
+    Name "ShadowCaster"
     Tags{"LightMode" = "ShadowCaster"}
 
     ZWrite On ZTest LEqual
@@ -9,6 +10,7 @@ ${Culling}
     HLSLPROGRAM
     // Required to compile gles 2.0 with standard srp library
     #pragma prefer_hlslcc gles
+    #pragma exclude_renderers d3d11_9x
     #pragma target 2.0
 
     //--------------------------------------
@@ -26,21 +28,32 @@ ${Defines}
     #include "CoreRP/ShaderLibrary/Color.hlsl"
 
 ${Graph}
+    struct VertexOutput
+    {
+        float2 uv           : TEXCOORD0;
+        float4 clipPos      : SV_POSITION;
+    };
+
     // x: global clip space bias, y: normal world space bias
     float4 _ShadowBias;
     float3 _LightDirection;
 
-    float4 ShadowPassVertex(GraphVertexInput v) : SV_POSITION
+    VertexOutput ShadowPassVertex(GraphVertexInput v)
     {
+        VertexOutput o;
+        UNITY_SETUP_INSTANCE_ID(v);
+
         // Vertex transformations performed by graph
 ${VertexShader}
-		VertexDescriptionInputs vdi = (VertexDescriptionInputs)0;
+        VertexDescriptionInputs vdi = (VertexDescriptionInputs)0;
 
         // Vertex description inputs defined by graph
 ${VertexShaderDescriptionInputs}
-	    VertexDescription vd = PopulateVertexData(vdi);
+        VertexDescription vd = PopulateVertexData(vdi);
         v.vertex.xyz = vd.Position;
 
+        o.uv = uv1;
+        
         float3 positionWS = TransformObjectToWorld(v.vertex.xyz);
         float3 normalWS = TransformObjectToWorldDir(v.normal);
 
@@ -54,12 +67,14 @@ ${VertexShaderDescriptionInputs}
         // _ShadowBias.x sign depens on if platform has reversed z buffer
         clipPos.z += _ShadowBias.x;
 
-    #if defined(UNITY_REVERSED_Z)
-        clipPos.z = min(clipPos.z, 1.0);
+    #if UNITY_REVERSED_Z
+        clipPos.z = min(clipPos.z, clipPos.w * UNITY_NEAR_CLIP_VALUE);
     #else
-        clipPos.z = max(clipPos.z, 0.0);
+        clipPos.z = max(clipPos.z, clipPos.w * UNITY_NEAR_CLIP_VALUE);
     #endif
-        return clipPos;
+        o.clipPos = clipPos;
+
+        return o;
     }
 
     half4 ShadowPassFragment() : SV_TARGET
@@ -72,6 +87,7 @@ ${VertexShaderDescriptionInputs}
 
 Pass
 {
+    Name "DepthOnly"
     Tags{"LightMode" = "DepthOnly"}
 
     ZWrite On
@@ -82,7 +98,13 @@ ${Culling}
     HLSLPROGRAM
     // Required to compile gles 2.0 with standard srp library
     #pragma prefer_hlslcc gles
+    #pragma exclude_renderers d3d11_9x
     #pragma target 2.0
+
+    //--------------------------------------
+    // GPU Instancing
+    #pragma multi_compile_instancing
+
     #pragma vertex vert
     #pragma fragment frag
 
@@ -94,18 +116,29 @@ ${Defines}
     #include "CoreRP/ShaderLibrary/Color.hlsl"
 
 ${Graph}
-    float4 vert(GraphVertexInput v) : SV_POSITION
+    struct VertexOutput
     {
+        float2 uv           : TEXCOORD0;
+        float4 clipPos      : SV_POSITION;
+    };
+
+    VertexOutput vert(GraphVertexInput v)
+    {
+        VertexOutput o = (VertexOutput)0;
+        UNITY_SETUP_INSTANCE_ID(v);
+
         // Vertex transformations performed by graph
 ${VertexShader}
-		VertexDescriptionInputs vdi = (VertexDescriptionInputs)0;
+        VertexDescriptionInputs vdi = (VertexDescriptionInputs)0;
 
         // Vertex description inputs defined by graph
 ${VertexShaderDescriptionInputs}
-	    VertexDescription vd = PopulateVertexData(vdi);
+        VertexDescription vd = PopulateVertexData(vdi);
         v.vertex.xyz = vd.Position;
-        
-        return TransformObjectToHClip(v.vertex.xyz);
+
+        o.uv = uv1;
+        o.clipPos = TransformObjectToHClip(v.vertex.xyz);
+        return o;
     }
 
     half4 frag() : SV_TARGET
