--- a/.gitmodules
+++ b/.gitmodules
@@ -5,8 +5,8 @@
 [submodule "Tests/UTF_Core"]
 	path = TestProjects/GraphicsTests/Assets/Tests/UTF_Core
 	url = https://github.com/Unity-Technologies/UTF_Core.git
+	branch = master
 [submodule "Tests/UTF_Tests_HDRP"]
-
 	path = TestProjects/GraphicsTests/Assets/Tests/UTF_Tests_HDRP
-
 	url = https://github.com/Unity-Technologies/UTF_Tests_HDRP.git
+	branch = master
