Add shader graph dependency

--- a/TestProjects/GraphicsTests/Packages/manifest.json
+++ b/TestProjects/GraphicsTests/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
     "dependencies": {
         "com.unity.render-pipelines.core": "file:../../../com.unity.render-pipelines.core", 
+        "com.unity.shadergraph": "file:../../../com.unity.shadergraph", 
         "com.unity.render-pipelines.high-definition": "file:../../../com.unity.render-pipelines.high-definition", 
         "com.unity.render-pipelines.lightweight": "file:../../../com.unity.render-pipelines.lightweight"
     }, 
