--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-ShaderGraph/**/*.png filter=lfs diff=lfs merge=lfs -text
-ShaderGraph/**/*.gif filter=lfs diff=lfs merge=lfs -text
+com.unity.shadergraph/**/*.png filter=lfs diff=lfs merge=lfs -text
+com.unity.shadergraph/**/*.gif filter=lfs diff=lfs merge=lfs -text
