--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,9 @@
 	path = TestProjects/GraphicsTests/Assets/Tests/UTF_Tests_HDRP
 	url = https://github.com/Unity-Technologies/UTF_Tests_HDRP.git
 	branch = master
+[submodule "TestProjects/GraphicsTests/Assets/Tests/UTF_Core"]
+	path = TestProjects/GraphicsTests/Assets/Tests/UTF_Core
+	url = https://github.com/Unity-Technologies/UTF_Core.git
+[submodule "TestProjects/GraphicsTests/Assets/Tests/UTF_Tests_HDRP"]
+	path = TestProjects/GraphicsTests/Assets/Tests/UTF_Tests_HDRP
+	url = https://github.com/Unity-Technologies/UTF_Tests_HDRP.git
