--- a/TestProjects/GraphicsTests/Packages/manifest.json
+++ b/TestProjects/GraphicsTests/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
     "dependencies": {
+        "com.unity.postprocessing": "file:../../../PostProcessing", 
         "com.unity.render-pipelines.core": "file:../../../com.unity.render-pipelines.core", 
         "com.unity.shadergraph": "file:../../../com.unity.shadergraph", 
         "com.unity.render-pipelines.high-definition": "file:../../../com.unity.render-pipelines.high-definition", 
