--- a/com.unity.shadergraph/package.json
+++ b/com.unity.shadergraph/package.json
@@ -3,6 +3,7 @@
     "description": "Shader Graph",
     "version": "0.1.19",
     "unity": "2018.1",
+    "displayName": "Shader Graph",
     "dependencies": {
     }
 }
