--- a/com.unity.render-pipelines.core/package.json
+++ b/com.unity.render-pipelines.core/package.json
@@ -2,7 +2,8 @@
     "name": "com.unity.render-pipelines.core",
     "description": "Core library for Unity render pipelines.",
     "version": "0.1.33",
-    "unity": "2018.1",
+    "unity": "2018.2",
+    "displayName": "Render Pipeline Core Library",
     "dependencies": {
         "com.unity.postprocessing": "2.0.2-preview"
     }
