--- a/com.unity.render-pipelines.lightweight/package.json
+++ b/com.unity.render-pipelines.lightweight/package.json
@@ -2,7 +2,8 @@
     "name": "com.unity.render-pipelines.lightweight",
     "description": "Lightweight Render Pipeline for Unity.",
     "version": "0.1.33",
-    "unity": "2018.1",
+    "unity": "2018.2",
+    "displayName": "Lightweight Render Pipeline",
     "dependencies": {
         "com.unity.postprocessing": "2.0.2-preview",
         "com.unity.render-pipelines.core": "0.1.33",
