--- a/com.unity.render-pipelines.lightweight/package.json
+++ b/com.unity.render-pipelines.lightweight/package.json
@@ -1,12 +1,12 @@
 {
     "name": "com.unity.render-pipelines.lightweight",
     "description": "Lightweight Render Pipeline for Unity.",
-    "version": "0.1.33",
+    "version": "2.0.0-preview",
     "unity": "2018.2",
     "displayName": "Lightweight Render Pipeline",
     "dependencies": {
-        "com.unity.postprocessing": "2.0.2-preview",
-        "com.unity.render-pipelines.core": "0.1.33",
-        "com.unity.shadergraph": "0.1.19"
+        "com.unity.postprocessing": "2.0.6-preview",
+        "com.unity.render-pipelines.core": "2.0.0-preview",
+        "com.unity.shadergraph": "2.0.0-preview"
     }
 }
