--- a/com.unity.shadergraph/package.json
+++ b/com.unity.shadergraph/package.json
@@ -1,7 +1,7 @@
 {
     "name": "com.unity.shadergraph",
     "description": "Shader Graph",
-    "version": "0.1.19",
+    "version": "2.0.0-preview",
     "unity": "2018.2",
     "displayName": "Shader Graph",
     "dependencies": {
