--- a/com.unity.visualeffectgraph/VisualEffectGraph/Shaders/ParticleQuads/PassGS.template
+++ b/com.unity.visualeffectgraph/VisualEffectGraph/Shaders/ParticleQuads/PassGS.template
@@ -35,6 +35,8 @@ void geom(point uint intStream[1] : TEXCOORD0,inout TriangleStream<VFX_VARYING_P
 
 		${VFXVertexCommonProcess}
 		
+		${VFXScaleBiasUV}
+		
 		${VFXVertexSetFlipbooksInterpolants}
 		
 		${VFXVertexAdditionalProcess}
