--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ ShaderGraph/DebugOutput/**
 ShaderGraph/Testing/IntegrationTests/.Failed
 TestProjects/GraphicsTests/Temp/
 TestProjects/LWRP/GraphicsTests/Temp/
+TestProjects/LWRP/GraphicsTests/obj/
+TestProjects/ShaderGraph/Temp/
