Add Face Sign functionality to LWRP, HDRP and preview subshaders

--- a/com.unity.render-pipelines.high-definition/HDRP/Editor/ShaderGraph/HDUnlitPassForward.template
+++ b/com.unity.render-pipelines.high-definition/HDRP/Editor/ShaderGraph/HDUnlitPassForward.template
@@ -193,6 +193,8 @@ ${Graph}
 
             $SurfaceDescriptionInputs.vertexColor:               output.vertexColor =    input.color;
 
+            $SurfaceDescriptionInputs.FaceSign:                  output.FaceSign =    input.isFrontFace;
+
             return output;
         }
 
