--- a/com.unity.render-pipelines.high-definition/HDRP/Editor/ShaderGraph/HDUnlitPassForward.template
+++ b/com.unity.render-pipelines.high-definition/HDRP/Editor/ShaderGraph/HDUnlitPassForward.template
@@ -37,7 +37,7 @@ ${VariantDefines}
     #define UNITY_MATERIAL_UNLIT // Need to be define before including Material.hlsl
 
     #include "CoreRP/ShaderLibrary/Common.hlsl"
-//    #include "CoreRP/ShaderLibrary/Wind.hlsl"
+    #include "CoreRP/ShaderLibrary/Wind.hlsl"
 
     #include "ShaderGraphLibrary/Functions.hlsl"
 
@@ -66,6 +66,8 @@ ${Defines}
         $VaryingsMeshToPS.texCoord3:            #define VARYINGS_NEED_TEXCOORD3
         $VaryingsMeshToPS.color:                #define VARYINGS_NEED_COLOR
         $VaryingsMeshToPS.cullFace:             #define VARYINGS_NEED_CULLFACE
+        $features.modifyMesh:                   #define HAVE_MESH_MODIFICATION
+
     //-------------------------------------------------------------------------------------
     // End Defines
     //-------------------------------------------------------------------------------------
@@ -122,7 +124,67 @@ ${Graph}
     // End graph generated code
     //-------------------------------------------------------------------------------------
 
-	// TODO: Do we want to build include functionality for sharing these preprocessed functions across templates?
+#ifdef HAVE_MESH_MODIFICATION
+        // TODO: we should share this between template files somehow
+        VertexDescriptionInputs AttributesMeshToVertexDescriptionInputs(AttributesMesh input)
+        {
+            VertexDescriptionInputs output;
+            ZERO_INITIALIZE(VertexDescriptionInputs, output);
+
+            $VertexDescriptionInputs.ObjectSpaceNormal:         output.ObjectSpaceNormal =           input.normalOS;
+            $VertexDescriptionInputs.WorldSpaceNormal:          output.WorldSpaceNormal =            TransformObjectToWorldNormal(input.normalOS);
+            $VertexDescriptionInputs.ViewSpaceNormal:           output.ViewSpaceNormal =             TransformWorldToViewDir(output.WorldSpaceNormal);
+            $VertexDescriptionInputs.TangentSpaceNormal:        output.TangentSpaceNormal =          float3(0.0f, 0.0f, 1.0f);
+
+            $VertexDescriptionInputs.ObjectSpaceTangent:        output.ObjectSpaceTangent =          input.tangentOS;
+            $VertexDescriptionInputs.WorldSpaceTangent:		    output.WorldSpaceTangent =           TransformObjectToWorldDir(input.tangentOS.xyz);
+            $VertexDescriptionInputs.ViewSpaceTangent:          output.ViewSpaceTangent =            TransformWorldToViewDir(output.WorldSpaceTangent);
+            $VertexDescriptionInputs.TangentSpaceTangent:       output.TangentSpaceTangent =         float3(1.0f, 0.0f, 0.0f);
+
+            $VertexDescriptionInputs.ObjectSpaceBiTangent:      output.ObjectSpaceBiTangent =        normalize(cross(input.normalOS, input.tangentOS) * (input.tangentOS.w > 0.0f ? 1.0f : -1.0f) * GetOddNegativeScale());
+            $VertexDescriptionInputs.WorldSpaceBiTangent:       output.WorldSpaceBiTangent =         TransformObjectToWorldDir(output.ObjectSpaceBiTangent);
+            $VertexDescriptionInputs.ViewSpaceBiTangent:        output.ViewSpaceBiTangent =          TransformWorldToViewDir(output.WorldSpaceBiTangent);
+            $VertexDescriptionInputs.TangentSpaceBiTangent:     output.TangentSpaceBiTangent =       float3(0.0f, 1.0f, 0.0f);
+
+            $VertexDescriptionInputs.ObjectSpacePosition:       output.ObjectSpacePosition =         input.positionOS;
+            $VertexDescriptionInputs.WorldSpacePosition:        output.WorldSpacePosition =          TransformObjectToWorld(input.positionOS);
+            $VertexDescriptionInputs.ViewSpacePosition:         output.ViewSpacePosition =           TransformWorldToView(output.WorldSpacePosition);
+            $VertexDescriptionInputs.TangentSpacePosition:      output.TangentSpacePosition =        float3(0.0f, 0.0f, 0.0f);
+
+		// TODO: support view direction in vertex shader
+//            $VertexDescriptionInputs.WorldSpaceViewDirection:   output.WorldSpaceViewDirection =     normalize(viewWS);
+//            $VertexDescriptionInputs.ObjectSpaceViewDirection:  output.ObjectSpaceViewDirection =    mul((float3x3) unity_WorldToObject, output.WorldSpaceViewDirection);
+//            $VertexDescriptionInputs.ViewSpaceViewDirection:    output.ViewSpaceViewDirection =      mul((float3x3) UNITY_MATRIX_V, output.WorldSpaceViewDirection);
+//            $VertexDescriptionInputs.TangentSpaceViewDirection: float3x3 tangentSpaceTransform =     float3x3(output.WorldSpaceTangent,output.WorldSpaceBiTangent,output.WorldSpaceNormal);
+//            $VertexDescriptionInputs.TangentSpaceViewDirection: output.TangentSpaceViewDirection =   mul(tangentSpaceTransform, output.WorldSpaceViewDirection);
+
+            // TODO: positionSS is SV_Position, graph input expects screenPosition to be 0..1 across the active viewport (?)
+            $VertexDescriptionInputs.ScreenPosition:            output.ScreenPosition = 0.0f;       // need to calculate projected screen position
+            $VertexDescriptionInputs.uv0:                       output.uv0 =            float4(input.uv0, 0.0f, 0.0f);
+            $VertexDescriptionInputs.uv1:                       output.uv1 =            float4(input.uv1, 0.0f, 0.0f);
+            $VertexDescriptionInputs.uv2:                       output.uv2 =            float4(input.uv2, 0.0f, 0.0f);
+            $VertexDescriptionInputs.uv3:                       output.uv3 =            float4(input.uv3, 0.0f, 0.0f);
+            $VertexDescriptionInputs.VertexColor:               output.VertexColor =    input.color;
+
+            return output;
+        }
+
+        AttributesMesh ApplyMeshModification(AttributesMesh input)
+        {
+            // build graph inputs
+            VertexDescriptionInputs vertexDescriptionInputs = AttributesMeshToVertexDescriptionInputs(input);
+
+            // evaluate vertex graph
+            VertexDescription vertexDescription = VertexDescriptionFunction(vertexDescriptionInputs);
+
+            // copy graph output to the results
+            $VertexDescription.Position:    input.positionOS = vertexDescription.Position;
+
+            return input;
+        }
+#endif // HAVE_MESH_MODIFICATION
+
+	    // TODO: Do we want to build include functionality for sharing these preprocessed functions across templates?
         FragInputs BuildFragInputs(VaryingsMeshToPS input)
         {
             FragInputs output;
@@ -161,7 +223,7 @@ ${Graph}
             $SurfaceDescriptionInputs.ViewSpaceNormal:           output.ViewSpaceNormal =             mul(output.WorldSpaceNormal, (float3x3) UNITY_MATRIX_I_V);         // transposed multiplication by inverse matrix to handle normal scale
             $SurfaceDescriptionInputs.TangentSpaceNormal:        output.TangentSpaceNormal =          float3(0.0f, 0.0f, 1.0f);
 
-            $SurfaceDescriptionInputs.WorldSpaceTangent:		    output.WorldSpaceTangent =           input.worldToTangent[0].xyz;
+            $SurfaceDescriptionInputs.WorldSpaceTangent          output.WorldSpaceTangent =           input.worldToTangent[0].xyz;
             $SurfaceDescriptionInputs.ObjectSpaceTangent:        output.ObjectSpaceTangent =          mul((float3x3) unity_WorldToObject, output.WorldSpaceTangent);
             $SurfaceDescriptionInputs.ViewSpaceTangent:          output.ViewSpaceTangent =            mul((float3x3) UNITY_MATRIX_V, output.WorldSpaceTangent);
             $SurfaceDescriptionInputs.TangentSpaceTangent:       output.TangentSpaceTangent =         float3(1.0f, 0.0f, 0.0f);
@@ -178,20 +240,22 @@ ${Graph}
             $SurfaceDescriptionInputs.TangentSpaceViewDirection: output.TangentSpaceViewDirection =   mul(tangentSpaceTransform, output.WorldSpaceViewDirection);
 
             // TODO: FragInputs.positionWS is badly named -- it's camera relative, not in world space
+            // we have to fix it up here to match graph input expectations
             $SurfaceDescriptionInputs.WorldSpacePosition:        output.WorldSpacePosition =          input.positionWS + _WorldSpaceCameraPos;
             $SurfaceDescriptionInputs.ObjectSpacePosition:       output.ObjectSpacePosition =         mul(unity_WorldToObject, float4(input.positionWS + _WorldSpaceCameraPos, 1.0f)).xyz;
             $SurfaceDescriptionInputs.ViewSpacePosition:         float4 posViewSpace =                mul(UNITY_MATRIX_V, float4(input.positionWS, 1.0f));
             $SurfaceDescriptionInputs.ViewSpacePosition:         output.ViewSpacePosition =           posViewSpace.xyz / posViewSpace.w;
             $SurfaceDescriptionInputs.TangentSpacePosition:      output.TangentSpacePosition =        float3(0.0f, 0.0f, 0.0f);
-            
-            $SurfaceDescriptionInputs.screenPosition:            output.screenPosition = input.positionSS;
+
+            // TODO: positionSS is SV_Position, graph input expects screenPosition to be 0..1 across the active viewport (?)
+            $SurfaceDescriptionInputs.ScreenPosition:            output.ScreenPosition = input.positionSS;
             
             $SurfaceDescriptionInputs.uv0:                       output.uv0 =    float4(input.texCoord0, 0.0f, 0.0f);
             $SurfaceDescriptionInputs.uv1:                       output.uv1 =    float4(input.texCoord1, 0.0f, 0.0f);
             $SurfaceDescriptionInputs.uv2:                       output.uv2 =    float4(input.texCoord2, 0.0f, 0.0f);
             $SurfaceDescriptionInputs.uv3:                       output.uv3 =    float4(input.texCoord3, 0.0f, 0.0f);
             
-            $SurfaceDescriptionInputs.vertexColor:               output.vertexColor =    input.color;
+            $SurfaceDescriptionInputs.VertexColor:               output.VertexColor =    input.color;
 
             return output;
         }
